# Projeto-WebSite-Flask-Bootcamp

./: .gitignore  LICENSE  README.md  app.py  database.py  pyproject.toml
static/: estilo.css
templates/: detalhevaga.html  home.html  inscricao_concluida.html
templates/includes/: footer.html  form_inscricao.html  navbar.html  vagas_item.html
